--- a/Company.Application.Menu/Company.Application.Menu.csproj
+++ b/Company.Application.Menu/Company.Application.Menu.csproj
@@ -8,13 +8,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Prism.Wpf" Version="9.0.537" />
+    <PackageReference Include="Prism.Unity" Version="9.0.537" />
     <PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
     <PackageReference Include="ReactiveUI.WPF" Version="20.4.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Company.Application.Share\Company.Application.Share.csproj" />
+    <ProjectReference Include="..\Company.Core\Company.Core.csproj" />
+    <ProjectReference Include="..\Company.Logger\Company.Logger.csproj" />
+    <ProjectReference Include="..\Company.UI\Company.UI.csproj" />
   </ItemGroup>
 
 </Project>
