feat:增加仿真相机(None)模块

--- a/Company.UI/Company.UI.csproj
+++ b/Company.UI/Company.UI.csproj
@@ -15,4 +15,14 @@
     <PackageReference Include="ReactiveUI.WPF" Version="20.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Images\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Images\PCB主板.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
