--- a/Company.Core/Company.Core.csproj
+++ b/Company.Core/Company.Core.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Prism.Wpf" Version="9.0.537" />
     <PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
     <PackageReference Include="ReactiveUI.WPF" Version="20.3.1" />
+    <PackageReference Include="System.Drawing.Common" Version="9.0.7" />
   </ItemGroup>
 
 </Project>
