feat:完善仿真平板探测器(None)模块

--- a/Company.Application.Share/Company.Application.Share.csproj
+++ b/Company.Application.Share/Company.Application.Share.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="ReactiveUI.WPF" Version="20.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Images\PCB主板.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
