--- a/Company.Application.Initialize/Company.Application.Initialize.csproj
+++ b/Company.Application.Initialize/Company.Application.Initialize.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Company.Application.Config\Company.Application.Config.csproj" />
     <ProjectReference Include="..\Company.Application.Share\Company.Application.Share.csproj" />
     <ProjectReference Include="..\Company.Core\Company.Core.csproj" />
     <ProjectReference Include="..\Company.Hardware.Camera\Company.Hardware.Camera.csproj" />
