--- a/Company.Application.Share/Company.Application.Share.csproj
+++ b/Company.Application.Share/Company.Application.Share.csproj
@@ -10,7 +10,12 @@
   <ItemGroup>
     <PackageReference Include="Prism.Wpf" Version="9.0.537" />
     <PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
-    <PackageReference Include="ReactiveUI.WPF" Version="20.3.1" />
+    <PackageReference Include="ReactiveUI.WPF" Version="20.4.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Company.Hardware.Camera\Company.Hardware.Camera.csproj" />
+    <ProjectReference Include="..\Company.Hardware.Detector\Company.Hardware.Detector.csproj" />
   </ItemGroup>
 
   <ItemGroup>
