--- a/Company.Logger/Company.Logger.csproj
+++ b/Company.Logger/Company.Logger.csproj
@@ -9,7 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="NLog" Version="6.0.1" />
-    <PackageReference Include="Prism.Wpf" Version="9.0.537" />
+    <PackageReference Include="Prism.Unity" Version="9.0.537" />
     <PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
     <PackageReference Include="ReactiveUI.WPF" Version="20.3.1" />
   </ItemGroup>
