feat:使用PropertyGrid展示配置 & 修改配置后通知相机及探测器

--- a/Company.Hardware.Camera/Company.Hardware.Camera.csproj
+++ b/Company.Hardware.Camera/Company.Hardware.Camera.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Company.Core\Company.Core.csproj" />
+    <ProjectReference Include="..\Company.Logger\Company.Logger.csproj" />
   </ItemGroup>
 
 </Project>
