feat:增加登录缓存

--- a/Company.Core/Company.Core.csproj
+++ b/Company.Core/Company.Core.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="System.Drawing.Common" Version="9.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Company.Logger\Company.Logger.csproj" />
+  </ItemGroup>
+
 </Project>
