feat:增加控制卡抽象基类

--- a/Company.Hardware.ControlCard/Company.Hardware.ControlCard.csproj
+++ b/Company.Hardware.ControlCard/Company.Hardware.ControlCard.csproj
@@ -13,4 +13,11 @@
     <PackageReference Include="ReactiveUI.WPF" Version="20.4.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Company.Application.Share\Company.Application.Share.csproj" />
+    <ProjectReference Include="..\Company.Core\Company.Core.csproj" />
+    <ProjectReference Include="..\Company.Logger\Company.Logger.csproj" />
+    <ProjectReference Include="..\Company.UI\Company.UI.csproj" />
+  </ItemGroup>
+
 </Project>
