--- a/Company.UI/Company.UI.csproj
+++ b/Company.UI/Company.UI.csproj
@@ -25,4 +25,8 @@
     <PackageReference Include="ReactiveUI.WPF" Version="20.3.1" />
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="xcopy &quot;$(ProjectDir)\bin\$(Configuration)\$(TargetFramework)\$(ProjectName).dll&quot; &quot;$(SolutionDir)\Shell\bin\$(Configuration)\$(TargetFramework)\Modules\&quot; /Y /S" />
+  </Target>
+
 </Project>
