--- a/Company.Application.Image/Company.Application.Image.csproj
+++ b/Company.Application.Image/Company.Application.Image.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Company.Core\Company.Core.csproj" />
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="xcopy &quot;$(ProjectDir)\bin\$(Configuration)\$(TargetFramework)\$(ProjectName).dll&quot; &quot;$(SolutionDir)\Shell\bin\$(Configuration)\$(TargetFramework)\Modules\&quot; /Y /S" />
+  </Target>
+
 </Project>
