--- a/Company.Application.Initialize/Company.Application.Initialize.csproj
+++ b/Company.Application.Initialize/Company.Application.Initialize.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\Company.Hardware.Detector\Company.Hardware.Detector.csproj" />
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="xcopy &quot;$(ProjectDir)\bin\$(Configuration)\$(TargetFramework)\$(ProjectName).dll&quot; &quot;$(SolutionDir)\Shell\bin\$(Configuration)\$(TargetFramework)\Modules\&quot; /Y /S" />
+  </Target>
+
 </Project>
