--- a/Company.Application.Main/Company.Application.Main.csproj
+++ b/Company.Application.Main/Company.Application.Main.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\Company.Application.Share\Company.Application.Share.csproj" />
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="xcopy &quot;$(ProjectDir)\bin\$(Configuration)\$(TargetFramework)\$(ProjectName).dll&quot; &quot;$(SolutionDir)\Shell\bin\$(Configuration)\$(TargetFramework)\Modules\&quot; /Y /S" />
+  </Target>
+
 </Project>
