--- a/Company.Hardware.Camera.HIK/Company.Hardware.Camera.HIK.csproj
+++ b/Company.Hardware.Camera.HIK/Company.Hardware.Camera.HIK.csproj
@@ -26,4 +26,8 @@
     </Reference>
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="xcopy &quot;$(ProjectDir)\bin\$(Configuration)\$(TargetFramework)\$(ProjectName).dll&quot; &quot;$(SolutionDir)\Shell\bin\$(Configuration)\$(TargetFramework)\Modules\&quot; /Y /S&#xD;&#xA;xcopy &quot;$(ProjectDir)\bin\$(Configuration)\$(TargetFramework)\MvCameraControl.Net.dll&quot; &quot;$(SolutionDir)\Shell\bin\$(Configuration)\$(TargetFramework)\Modules\&quot; /Y /S" />
+  </Target>
+
 </Project>
