--- a/Company.Hardware.Detector/Company.Hardware.Detector.csproj
+++ b/Company.Hardware.Detector/Company.Hardware.Detector.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\Company.Logger\Company.Logger.csproj" />
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="xcopy &quot;$(ProjectDir)\bin\$(Configuration)\$(TargetFramework)\$(ProjectName).dll&quot; &quot;$(SolutionDir)\Shell\bin\$(Configuration)\$(TargetFramework)\Modules\&quot; /Y /S" />
+  </Target>
+
 </Project>
