feat:众为兴控制卡的SDK包下载安装及模块开发

--- a/Company.Hardware.ControlCard.AdTech/Company.Hardware.ControlCard.AdTech.csproj
+++ b/Company.Hardware.ControlCard.AdTech/Company.Hardware.ControlCard.AdTech.csproj
@@ -14,17 +14,18 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Company.Hardware.Camera\Company.Hardware.Camera.csproj" />
+    <ProjectReference Include="..\Company.Core\Company.Core.csproj" />
     <ProjectReference Include="..\Company.Hardware.ControlCard\Company.Hardware.ControlCard.csproj" />
-    <ProjectReference Include="..\Company.Hardware.Detector\Company.Hardware.Detector.csproj" />
+    <ProjectReference Include="..\Company.Logger\Company.Logger.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Images\CT.tiff">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Images\PCB主板.jpg">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <Folder Include="Api\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="dll\adtemc.dll">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
