--- a/Company.Hardware.ControlCard.AdTech/Company.Hardware.ControlCard.AdTech.csproj
+++ b/Company.Hardware.ControlCard.AdTech/Company.Hardware.ControlCard.AdTech.csproj
@@ -25,12 +25,12 @@
 
   <ItemGroup>
     <None Update="dll\adtemc.dll">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="xcopy &quot;$(ProjectDir)\bin\$(Configuration)\$(TargetFramework)\$(ProjectName).dll&quot; &quot;$(SolutionDir)\Shell\bin\$(Configuration)\$(TargetFramework)\Modules\&quot; /Y /S" />
+    <Exec Command="rem xcopy &quot;$(ProjectDir)\bin\$(Configuration)\$(TargetFramework)\$(ProjectName).dll&quot; &quot;$(SolutionDir)\Shell\bin\$(Configuration)\$(TargetFramework)\Modules\&quot; /Y /S&#xD;&#xA;rem xcopy &quot;$(ProjectDir)\bin\$(Configuration)\$(TargetFramework)\dll\adtemc.dll&quot; &quot;$(SolutionDir)\Shell\bin\$(Configuration)\$(TargetFramework)\&quot; /Y /S" />
   </Target>
 
 </Project>
