--- a/Company.Application.Process/Company.Application.Process.csproj
+++ b/Company.Application.Process/Company.Application.Process.csproj
@@ -8,25 +8,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MahApps.Metro" Version="2.4.10" />
     <PackageReference Include="Prism.Unity" Version="9.0.537" />
     <PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
     <PackageReference Include="ReactiveUI.WPF" Version="20.4.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Company.Application.Share\Company.Application.Share.csproj" />
     <ProjectReference Include="..\Company.Core\Company.Core.csproj" />
-    <ProjectReference Include="..\Company.Hardware.Camera\Company.Hardware.Camera.csproj" />
-    <ProjectReference Include="..\Company.Hardware.ControlCard\Company.Hardware.ControlCard.csproj" />
-    <ProjectReference Include="..\Company.Hardware.Detector\Company.Hardware.Detector.csproj" />
+    <ProjectReference Include="..\Company.Logger\Company.Logger.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Images\CT.tiff">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Images\PCB主板.jpg">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    <Folder Include="Services\" />
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
