--- a/Shell/Shell.csproj
+++ b/Shell/Shell.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Company.Application.Config\Company.Application.Config.csproj" />
+    <ProjectReference Include="..\Company.Application.Flow\Company.Application.Flow.csproj" />
     <ProjectReference Include="..\Company.Application.Image\Company.Application.Image.csproj" />
     <ProjectReference Include="..\Company.Application.Initialize\Company.Application.Initialize.csproj" />
     <ProjectReference Include="..\Company.Application.Login\Company.Application.Login.csproj" />
