feat:增加图像处理滤波模块(2)

--- a/Company.Application.Filter/Company.Application.Filter.csproj
+++ b/Company.Application.Filter/Company.Application.Filter.csproj
@@ -14,13 +14,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Company.Algorithm.Unwrapper\Company.Algorithm.Unwrapper.csproj" />
     <ProjectReference Include="..\Company.Application.Share\Company.Application.Share.csproj" />
     <ProjectReference Include="..\Company.Core\Company.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Services\" />
-    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
