feat:导入Png图标以BitmapImage显示

--- a/Company.Application.Filter/Company.Application.Filter.csproj
+++ b/Company.Application.Filter/Company.Application.Filter.csproj
@@ -17,6 +17,7 @@
     <ProjectReference Include="..\Company.Algorithm.Unwrapper\Company.Algorithm.Unwrapper.csproj" />
     <ProjectReference Include="..\Company.Application.Share\Company.Application.Share.csproj" />
     <ProjectReference Include="..\Company.Core\Company.Core.csproj" />
+    <ProjectReference Include="..\Company.UI\Company.UI.csproj" />
   </ItemGroup>
 
 </Project>
