--- a/WpfHelper/WpfHelper.csproj
+++ b/WpfHelper/WpfHelper.csproj
@@ -10,11 +10,14 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Company.Application.Config\Company.Application.Config.csproj" />
+    <ProjectReference Include="..\Company.Application.Filter\Company.Application.Filter.csproj" />
+    <ProjectReference Include="..\Company.Application.Flow\Company.Application.Flow.csproj" />
     <ProjectReference Include="..\Company.Application.Image\Company.Application.Image.csproj" />
     <ProjectReference Include="..\Company.Application.Initialize\Company.Application.Initialize.csproj" />
     <ProjectReference Include="..\Company.Application.Login\Company.Application.Login.csproj" />
     <ProjectReference Include="..\Company.Application.Main\Company.Application.Main.csproj" />
     <ProjectReference Include="..\Company.Application.Menu\Company.Application.Menu.csproj" />
+    <ProjectReference Include="..\Company.Application.Process\Company.Application.Process.csproj" />
     <ProjectReference Include="..\Company.Application.Share\Company.Application.Share.csproj" />
     <ProjectReference Include="..\Company.Core\Company.Core.csproj" />
     <ProjectReference Include="..\Company.Logger\Company.Logger.csproj" />
