--- a/Company.Algorithm.Unwrapper/Company.Algorithm.Unwrapper.csproj
+++ b/Company.Algorithm.Unwrapper/Company.Algorithm.Unwrapper.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ReactiveUI.WPF" Version="21.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Company.Core\Company.Core.csproj" />
   </ItemGroup>
 
