--- a/Shell/Shell.csproj
+++ b/Shell/Shell.csproj
@@ -12,10 +12,11 @@
     <PackageReference Include="MahApps.Metro" Version="2.4.10" />
     <PackageReference Include="Prism.Unity" Version="9.0.537" />
     <PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
-    <PackageReference Include="ReactiveUI.WPF" Version="20.4.1" />
+    <PackageReference Include="ReactiveUI.WPF" Version="21.0.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Company.Application.Axis\Company.Application.Axis.csproj" />
     <ProjectReference Include="..\Company.Application.Config\Company.Application.Config.csproj" />
     <ProjectReference Include="..\Company.Application.Filter\Company.Application.Filter.csproj" />
     <ProjectReference Include="..\Company.Application.Flow\Company.Application.Flow.csproj" />
