--- a/WpfHelper/WpfHelper.csproj
+++ b/WpfHelper/WpfHelper.csproj
@@ -9,6 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ReactiveUI.WPF" Version="21.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Company.Application.Axis\Company.Application.Axis.csproj" />
     <ProjectReference Include="..\Company.Application.Config\Company.Application.Config.csproj" />
     <ProjectReference Include="..\Company.Application.Filter\Company.Application.Filter.csproj" />
     <ProjectReference Include="..\Company.Application.Flow\Company.Application.Flow.csproj" />
